<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.user.musicalstructureapp.MainActivity"
    style="@style/Scroll_view">

    <LinearLayout
    style="@style/Linear_Layout_Main">

    <TextView
        android:id="@+id/about"
        android:text="@string/category_about"
        style="@style/CategoryStyle" />

    <TextView
        android:id="@+id/albums"
        android:text="@string/category_albums"
        style="@style/CategoryStyle" />

    <TextView
        android:id="@+id/songs"
        android:text="@string/category_songs"
        style="@style/CategoryStyle" />

    <TextView
        android:id="@+id/store"
        android:text="@string/category_store"
        style="@style/CategoryStyle" />

    </LinearLayout>

</ScrollView>